--- a/plugin.yml
+++ b/plugin.yml
@@ -1,7 +1,9 @@
 name: AllAPILoader
 main: OhhhAlex\AllAPILoader\Main
 version: 3.0
-api: [3.0.0, 3.0.0-ALPHA12, 4.0.0]
+api: 
+- 3.0.0
+- 3.1.3
 author: TheNewHEROBRINE - OhhhAlex Copy
 description: Makes the server load every plugin regardless of the API version
 load: STARTUP
